updated for code version after all testing. also update opacities folder with new dust species

--- a/opacs_jankovic/calc_dust_opac/calc_planck_opac.ipynb
+++ b/opacs_jankovic/calc_dust_opac/calc_planck_opac.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -25,7 +25,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": null,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " progress: 100.0 %"
+      " progress: 93.3 %"
      ]
     }
    ],
@@ -100,7 +100,7 @@
     "#directory = 'fayalite_F01'\n",
     "#directory = 'graphite_D84'\n",
     "#directory = 'olivine_F01'\n",
-    "directory = 'silicon_carbide_L93'\n",
+    "directory = 'OlivineSC_F01_Z11'\n",
     "in_label = '_0.02'\n",
     "out_label = '' # = in_label\n",
     "\n",
@@ -344,7 +344,7 @@
     "in_label = '_0.02'\n",
     "out_label = '' # = in_label\n",
     "\n",
-    "temp_stellar = [3830.]\n",
+    "temp_stellar = [3830., 4550.]\n",
     "temp_grid = np.logspace(np.log10(100), np.log10(2000), 210)\n"
    ]
   },
@@ -364,6 +364,66 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "for temp in temp_stellar:\n",
+    "    planck_grid_all = []\n",
+    "    for mie_gsc_grid in mie_gsc_grid_all:\n",
+    "        planck_grid_all.append(calc_planck_opac(lambda_grid, mie_gsc_grid, temp))\n",
+    "    np.savetxt(directory+'/opac_planck_gsc_tstar%.0f' % temp +out_label+'.dat', planck_grid_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculation of the average g factor for MgSiO3\n",
+    "directory = 'enstatite_J98_J94_D95'\n",
+    "in_label = '_0.02'\n",
+    "out_label = '' # = in_label\n",
+    "\n",
+    "temp_stellar = [3830.]\n",
+    "temp_grid = np.logspace(np.log10(100), np.log10(2000), 210)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 6,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "lambda_grid = np.loadtxt(directory+'/opac_wavelength.dat')\n",
+    "mie_gsc_grid_all = np.loadtxt(directory+'/opac_mie_gsc'+in_label+'.dat')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 7,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "for temp in temp_stellar:\n",
+    "    planck_grid_all = []\n",
+    "    for mie_gsc_grid in mie_gsc_grid_all:\n",
+    "        planck_grid_all.append(calc_planck_opac(lambda_grid, mie_gsc_grid, temp))\n",
+    "    np.savetxt(directory+'/opac_planck_gsc_tstar%.0f' % temp +out_label+'.dat', planck_grid_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculation of the average g factor for Olivine\n",
+    "directory = 'olivine_F01'\n",
+    "in_label = '_0.02'\n",
+    "out_label = '' # = in_label\n",
+    "\n",
+    "temp_stellar = [3830.]\n",
+    "temp_grid = np.logspace(np.log10(100), np.log10(2000), 210)\n",
+    "lambda_grid = np.loadtxt(directory+'/opac_wavelength.dat')\n",
+    "mie_gsc_grid_all = np.loadtxt(directory+'/opac_mie_gsc'+in_label+'.dat')\n",
     "for temp in temp_stellar:\n",
     "    planck_grid_all = []\n",
     "    for mie_gsc_grid in mie_gsc_grid_all:\n",
@@ -377,31 +437,15 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Calculation of the average g factor for MgSiO3\n",
-    "directory = 'enstatite_J98_J94_D95'\n",
+    "#Calculation of the average g factor for MgFeSiO4\n",
+    "directory = 'MgFeSiO4_D95'\n",
     "in_label = '_0.02'\n",
     "out_label = '' # = in_label\n",
     "\n",
-    "temp_stellar = [4550.]\n",
-    "temp_grid = np.logspace(np.log10(100), np.log10(2000), 210)\n"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 4,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "temp_stellar = [4550., 3830.]\n",
+    "temp_grid = np.logspace(np.log10(100), np.log10(2000), 210)\n",
     "lambda_grid = np.loadtxt(directory+'/opac_wavelength.dat')\n",
-    "mie_gsc_grid_all = np.loadtxt(directory+'/opac_mie_gsc'+in_label+'.dat')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 5,
-   "metadata": {},
-   "outputs": [],
-   "source": [
+    "mie_gsc_grid_all = np.loadtxt(directory+'/opac_mie_gsc'+in_label+'.dat')\n",
     "for temp in temp_stellar:\n",
     "    planck_grid_all = []\n",
     "    for mie_gsc_grid in mie_gsc_grid_all:\n",
@@ -411,16 +455,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
-    "#Calculation of the average g factor for Olivine\n",
-    "directory = 'olivine_F01'\n",
+    "#Calculation of the average g factor for Mg08Fe12SiO4\n",
+    "directory = 'Mg08Fe12SiO4_D95'\n",
     "in_label = '_0.02'\n",
     "out_label = '' # = in_label\n",
     "\n",
-    "temp_stellar = [4550.]\n",
+    "temp_stellar = [4550., 3830.]\n",
     "temp_grid = np.logspace(np.log10(100), np.log10(2000), 210)\n",
     "lambda_grid = np.loadtxt(directory+'/opac_wavelength.dat')\n",
     "mie_gsc_grid_all = np.loadtxt(directory+'/opac_mie_gsc'+in_label+'.dat')\n",
