organising repo & fixed bug in init.cpp

--- a/opacs_jankovic/calc_dust_opac/calc_planck_opac.ipynb
+++ b/opacs_jankovic/calc_dust_opac/calc_planck_opac.ipynb
@@ -82,14 +82,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      " progress: 93.3 %"
+      " progress: 100.0 %"
      ]
     }
    ],
@@ -100,7 +100,8 @@
     "#directory = 'fayalite_F01'\n",
     "#directory = 'graphite_D84'\n",
     "#directory = 'olivine_F01'\n",
-    "directory = 'OlivineSC_F01_Z11'\n",
+    "#directory = 'OlivineSC_F01_Z11'\n",
+    "directory = 'Mg05Fe05SiO3_J94_D95'\n",
     "in_label = '_0.02'\n",
     "out_label = '' # = in_label\n",
     "\n",
@@ -461,6 +462,28 @@
    "source": [
     "#Calculation of the average g factor for Mg08Fe12SiO4\n",
     "directory = 'Mg08Fe12SiO4_D95'\n",
+    "in_label = '_0.02'\n",
+    "out_label = '' # = in_label\n",
+    "\n",
+    "temp_stellar = [4550., 3830.]\n",
+    "temp_grid = np.logspace(np.log10(100), np.log10(2000), 210)\n",
+    "lambda_grid = np.loadtxt(directory+'/opac_wavelength.dat')\n",
+    "mie_gsc_grid_all = np.loadtxt(directory+'/opac_mie_gsc'+in_label+'.dat')\n",
+    "for temp in temp_stellar:\n",
+    "    planck_grid_all = []\n",
+    "    for mie_gsc_grid in mie_gsc_grid_all:\n",
+    "        planck_grid_all.append(calc_planck_opac(lambda_grid, mie_gsc_grid, temp))\n",
+    "    np.savetxt(directory+'/opac_planck_gsc_tstar%.0f' % temp +out_label+'.dat', planck_grid_all)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "#Calculation of the average g factor for Mg08Fe12SiO4\n",
+    "directory = 'Mg05Fe05SiO3_J94_D95'\n",
     "in_label = '_0.02'\n",
     "out_label = '' # = in_label\n",
     "\n",
